# pyJellyfish

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  clean.sh  pyproject.toml  setup.py
jf/pkgs/: links.txt
pyjellyfish/: Jellyfish.py  __init__.py
