[build-system]
requires = ["patchelf", "pip", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjellyfish"
version = "1.2.0"
requires-python = ">= 3.6"
authors = [
  { name="Albert Feghaly", email="albert.feghaly@umontreal.ca" },
]
description = "A python wrapper around DNA k-kmer counter Jellfish"
readme = "README.md"
license = { text="BSD-3-Clause" }
keywords = ["DNA", "RNA", "k-mer"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Bioinformatics",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: BSD-3-Clause License",
  "Natural Language :: English",
]

[project.urls]
Repository = "https://github.com/iric-soft/pyJellyfish"

[tool.setuptools]
packages = ["pyjellyfish", "jf"]

[tool.setuptools.package-data]
pyjellyfish = [".*libs/*"]
jf = ["pkgs/*"]
