[build-system]
requires = ["pip", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjellyfish"
requires-python = ">= 3.6"
authors = [
  { name="Albert Feghaly", email="bioinformatique@iric.ca" },
]
description = "A python wrapper around DNA k-kmer counter Jellfish"
license = { text="BSD" }
keywords = ["k-mer", "DNA"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.6",
  "Natural Language :: English",
]
dynamic = ["version", "readme"]

[project.urls]
Repository = "https://github.com/iric-soft/pyJellyfish"

[tool.setuptools]
packages = ["pyjellyfish"]
py-modules = ["dna_jellyfish"]
include-package-data = true

[tool.setuptools.package-data]
pyjellyfish = [".*libs/*"]

[tool.setuptools.exclude-package-data]
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# https://stackoverflow.com/a/58050701
# https://stackoverflow.com/a/54953494
jf = ["pkgs/*"]

[tool.setuptools.dynamic]
version = {attr = "pyjellyfish.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
